Update app name and readme

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     ],
     "i18n": {
       "en": {
-        "name": "Message Demo"
+        "name": "WIMP"
       }
     },
     "appUUID": "02d98333-ac3f-472e-a175-b021a0e82104"
